# executive-ai-mvp

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  projectplan.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  test_conversation_flow.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_conversation_tables.py
backend/scripts/: run_migrations.py
backend/src/: __main__.py  config.py  database.py  logger.py  main.py
backend/src/agents/: __init__.py  research_agent.py
backend/src/exceptions/: __init__.py  service_exceptions.py
backend/src/models/: base.py  chat.py  company_info.py  conversation.py  db_models.py  job_requirements.py
backend/src/prompts/: __init__.py  question_generation_prompts.py  role_specific_templates.py
backend/src/routers/: chat.py  health.py
backend/src/services/: chat.py  company_research_service.py  conversation_service.py  llm_factory.py  question_generation_service.py  requirements_extraction_service.py  web_search_wrapper.py
backend/src/utils/: __init__.py  error_handler.py
backend/src/workflows/: __init__.py  executive_search_graph.py  state_schema.py
backend/src/workflows/nodes/: __init__.py  answer_processing_node.py  base_node.py  completion_check_node.py  extraction_node.py  question_generation_node.py  question_presentation_node.py  research_node.py  summary_generation_node.py
backend/src/workflows/tools/: __init__.py  question_generation_tools.py  research_tools.py
backend/tests/: test_chat.py  test_health.py
ui/: index.html  package-lock.json  (+3 more)
(+18 files in other folders)
