[tool.poetry]
name = "executive-ai-backend"
version = "0.1.0"
description = "Executive AI MVP Backend"
authors = ["Your Name <you@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.0"
redis = "^5.0.4"
langchain = "^0.3.26"
langchain-openai = "^0.3.27"
langgraph = "^0.2.0"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
python-dotenv = "^1.1.1"
alembic = "^1.13.0"
aiohttp = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"